--- a/categoria.css
+++ b/categoria.css
@@ -6,64 +6,6 @@ body {
   color: #111;
 }
 
-header {
-  background-color: rgba(0, 0, 0, 0.6);
-  color: white;
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  align-items: center;
-  padding: 20px 30px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
-}
-
-.menu-icon {
-  font-size: 24px;
-  cursor: pointer;
-  justify-self: start;
-}
-
-.search-bar {
-  display: flex;
-  align-items: center;
-  background-color: white;
-  border-radius: 20px;
-  padding: 5px 10px;
-  margin-left: 10px;
-}
-
-.search-bar input {
-  border: none;
-  outline: none;
-  margin-left: 8px;
-}
-
-.search-icon {
-  width: 16px;
-  height: 16px;
-  fill: #000;
-}
-
-.center-title {
-  font-size: 30px;
-  text-align: center;
-  white-space: nowrap;
-}
-
-.right-links {
-  display: flex;
-  gap: 20px;
-  justify-self: end;
-}
-
-a {
-  color: white;
-  text-decoration: none;
-}
-
 #tituloCategoria {
   text-align: center;
   font-size: 2.5rem;
@@ -79,6 +21,7 @@ a {
 
 .overlay {
   padding: 40px;
+  padding-top: 120px;
   max-width: 1400px;
   margin: auto;
 }
@@ -144,16 +87,10 @@ a {
   color: #666;
 }
 
-
 @media (max-width: 768px) {
     header {
         grid-template-columns: auto 1fr auto;
         padding: 15px 20px;
-    }
-
-    .menu-icon {
-        grid-column: 1;
-        justify-self: start;
     }
 
     .center-title {
@@ -179,14 +116,13 @@ a {
     body, html {
         /* Desactivamos el centrado vertical en móvil si hay scroll */
         justify-content: flex-start;
-        padding-top: 80px; /* Espacio para el header fijo */
-        padding-bottom: 100px; /* Espacio para el footer fijo */
+        padding-top: 20px; /* Espacio para el header fijo */
     }
 
     .main-content {
         /* En móvil, ajustamos el padding-top para que no quede demasiado abajo */
         padding-top: calc(70px + 3vh); /* Ajusta según sea necesario */
-        padding: 15px;
+        padding: px;
         max-width: 100%;
     }
 
@@ -260,10 +196,27 @@ a {
     .site-footer {
         padding-bottom: 15px;
     }
-}
 
-.search-icon-mobile {
-    display: none;
-    padding: 8px;
-    cursor: pointer;
+  .overlay {
+    padding-top: 20px;
+  }
+    .product-grid {
+    grid-template-columns: 1fr; /* Una sola columna */
+    gap: 30px;
+    padding: 0 5px 20px;
+  }
+
+  .product-card img {
+    height: auto;
+    max-height: 350px; /* o lo que se vea bien en móvil */
+  }
+
+  .product-name {
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .product-price {
+    text-align: center;
+  }
 }
