--- a/categoria.css
+++ b/categoria.css
@@ -86,6 +86,22 @@ body {
   color: #666;
 }
 
+.categoria-bloque {
+  margin-bottom: 60px;
+  padding: 30px 10px 10px 10px;
+}
+
+.categoria-titulo {
+  text-align: left;
+  font-size: 2rem;
+  margin-bottom: 30px;
+  margin-top: 0;
+  color: #222;
+  padding-left: 15px;
+  letter-spacing: 1px;
+  font-weight: 500;
+}
+
 @media (max-width: 768px) {
     header {
         grid-template-columns: auto 1fr auto;
